Start moving swagger to yaml file (3)
